# PythonChessLibrary

./: .gitignore  LICENSE  README.md  game.py  player.py  setup.cfg  setup.py  tools.py
PythonChessLibrary/: game.py  player.py
PythonChessLibrary/PythonChessLibrary.egg-info/: PKG-INFO  SOURCES.txt
