[metadata]
name = PythonChessLibrary
version = 0.0.1
author = jschultz38
author_email = jschultz38@gatech.edu
description = A basic set of classes to construct a chess game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jschultz38/PythonChessLibrary
project_urls =
    Bug Tracker = https://github.com/jschultz38/PythonChessLibrary/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = PythonChessLibrary
packages = find:
python_requires = >=3.6

[options.packages.find]
where = PythonChessLibrary